Added profile image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <body>
         <div class="siteContainer">
-            <h1>Ricardo's Website</h1>
+            <div class="header">
+                <h1>Ricardo's Website</h1>
+            </div>
+            <div class="infoBody">
+                <img src="./res/profilePhoto.png"/>
+            </div>
         </div>
     </body>
 
