Switch to side bar profile

--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Ricardo Amaya</title>
-        <link href="styles.css" rel="stylesheet" type="text/css">
-    </head>
 
-    <body>
-        <div class="siteContainer">
-            <div class="header">
-                <h1>Ricardo's Website</h1>
-            </div>
-            <div class="infoBody">
-                <img src="./res/profilePhoto.png"/>
+<head>
+    <meta charset="UTF-8">
+    <title>Ricardo Amaya</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <div id="container">
+        <!--Side Menu Bar-->
+        <div id="sideMenuBar">
+            <img id="profilePhoto" src="./res/profilePhoto.png"/>
+            <h1 id="profileName">Ricardo Amaya</h1>
+            <h3 id="profileTitle">Software Engineer</h3>
+            <div id="linksList">
+                <h4>Section 1</h4>
+                <h4>Section 2</h4>
+                <h4>Section 3</h4>
+                <h4>Section 4</h4>
             </div>
         </div>
-    </body>
+        <!--/Side Menu Bar-->
+
+        <!--Mid Section-->
+        <div id="midSection">
+
+        </div>
+        <!--/Mid Section-->
+    </div>
+
+
+</body>
 
 </html>
